# Femora

./: .gitignore  CMakeLists.txt  README.md  run.ps1  run.sh
gmsh_files/: rect_3x4.geo  rect_3x4.msh  rect_3x4_manual.geo
include/: config.h  field.h  gmsh_reader.h  matrix_csr.h  mesh.h  vector2d.h
src/: fem_sim.cpp  femora.cpp  field.cpp  gmsh_reader.cpp  mesh.cpp  vector2d.cpp
